# libacpp-json

./: CMakeLists.txt  README.md  build.bat  build.sh  conanfile.py  conanfile.txt
include/libacpp-json/: consumer.h  log.h  parser.h  parser.inl  reflection.h  utils.h
src/: CMakeLists.txt  consumer.cpp  parser.cpp  utils.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  test_package.cpp
tests/: CMakeLists.txt  consumer_test.cpp  main.cpp  parser_test.cpp  reflection_test.cpp
